--- a/research_papers/Trading crypto with ML under changing markets.ipynb
+++ b/research_papers/Trading crypto with ML under changing markets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0a785aff",
+   "id": "aecbf309",
    "metadata": {},
    "source": [
     "## Forecasting and trading cryptocurrencies with machine learning under changing market conditions\n",
@@ -10,14 +10,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5682f0e0",
+   "metadata": {},
+   "source": [
+    "#### - coins\n",
+    "Bitcoin, ethereum, litecoin\n",
+    "\n",
+    "#### - regressors\n",
+    "closing prices, high, low, daily trading volume, market capi (from coin market cap), 12 indicators of blockchain information (from https://coinmetrics.io/)\n",
+    "\n",
+    "Dependent variable: daily log return (closing price)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b597edf0",
+   "id": "50c6fb55",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#Bitcoin, ethereum, litecoin\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
