--- a/research_papers/EDA.ipynb
+++ b/research_papers/EDA.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "a3028f8f",
    "metadata": {},
    "outputs": [
@@ -32,13 +32,202 @@
     "data = get_data(tickers)\n",
     "\n",
     "df = pd.DataFrame(data, columns = ['id', 'symbol', 'date', 'high', 'low', 'open', 'close', 'volumeto', 'volumefor'])\n",
-    "df = df.drop('id', axis=1)\n",
-    "df = df.drop_duplicates()"
+    "df = df.drop('id', axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
+   "id": "4d1593f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>symbol</th>\n",
+       "      <th>date</th>\n",
+       "      <th>high</th>\n",
+       "      <th>low</th>\n",
+       "      <th>open</th>\n",
+       "      <th>close</th>\n",
+       "      <th>volumeto</th>\n",
+       "      <th>volumefor</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>FUN</td>\n",
+       "      <td>1458172800</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>FUN</td>\n",
+       "      <td>1449100800</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>FUN</td>\n",
+       "      <td>1449187200</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>FUN</td>\n",
+       "      <td>1449273600</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>FUN</td>\n",
+       "      <td>1449360000</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10000</th>\n",
+       "      <td>ETH</td>\n",
+       "      <td>1467590400</td>\n",
+       "      <td>12.13</td>\n",
+       "      <td>11.280</td>\n",
+       "      <td>11.74</td>\n",
+       "      <td>11.38</td>\n",
+       "      <td>8260333.00</td>\n",
+       "      <td>726090.82</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10001</th>\n",
+       "      <td>ETH</td>\n",
+       "      <td>1467676800</td>\n",
+       "      <td>11.41</td>\n",
+       "      <td>8.976</td>\n",
+       "      <td>11.34</td>\n",
+       "      <td>10.45</td>\n",
+       "      <td>6584753.12</td>\n",
+       "      <td>644840.11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10002</th>\n",
+       "      <td>ETH</td>\n",
+       "      <td>1467763200</td>\n",
+       "      <td>11.11</td>\n",
+       "      <td>10.210</td>\n",
+       "      <td>10.47</td>\n",
+       "      <td>10.43</td>\n",
+       "      <td>12309767.28</td>\n",
+       "      <td>1180583.52</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10003</th>\n",
+       "      <td>ETH</td>\n",
+       "      <td>1467849600</td>\n",
+       "      <td>10.31</td>\n",
+       "      <td>9.529</td>\n",
+       "      <td>10.43</td>\n",
+       "      <td>10.03</td>\n",
+       "      <td>10716900.61</td>\n",
+       "      <td>1068420.96</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10004</th>\n",
+       "      <td>ETH</td>\n",
+       "      <td>1467936000</td>\n",
+       "      <td>11.64</td>\n",
+       "      <td>10.300</td>\n",
+       "      <td>10.03</td>\n",
+       "      <td>11.27</td>\n",
+       "      <td>12116057.51</td>\n",
+       "      <td>1075333.09</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>10005 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      symbol        date   high     low   open  close     volumeto   volumefor\n",
+       "0        FUN  1458172800   0.00   0.000   0.00   0.00         0.00        0.00\n",
+       "1        FUN  1449100800   0.00   0.000   0.00   0.00         0.00        0.00\n",
+       "2        FUN  1449187200   0.00   0.000   0.00   0.00         0.00        0.00\n",
+       "3        FUN  1449273600   0.00   0.000   0.00   0.00         0.00        0.00\n",
+       "4        FUN  1449360000   0.00   0.000   0.00   0.00         0.00        0.00\n",
+       "...      ...         ...    ...     ...    ...    ...          ...         ...\n",
+       "10000    ETH  1467590400  12.13  11.280  11.74  11.38   8260333.00   726090.82\n",
+       "10001    ETH  1467676800  11.41   8.976  11.34  10.45   6584753.12   644840.11\n",
+       "10002    ETH  1467763200  11.11  10.210  10.47  10.43  12309767.28  1180583.52\n",
+       "10003    ETH  1467849600  10.31   9.529  10.43  10.03  10716900.61  1068420.96\n",
+       "10004    ETH  1467936000  11.64  10.300  10.03  11.27  12116057.51  1075333.09\n",
+       "\n",
+       "[10005 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "317d8576",
    "metadata": {},
    "outputs": [],
@@ -73,52 +262,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "e3716a44",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "current_symbols = ('BTC', 'ETH', 'BNB', 'BCC', 'NEO', 'LTC', 'QTUM', 'ADA', 'XRP', 'EOS', 'TUSD', 'IOTA', 'XLM', 'ONT', 'TRX', 'ETC', 'ICX', 'VEN', 'NULS', 'VET', 'PAX', 'BCHABC', 'BCHSV', 'USDC', 'LINK', 'WAVES', 'BTT', 'USDS', 'ONG', 'HOT', 'ZIL', 'ZRX', 'FET', 'BAT', 'XMR', 'ZEC', 'IOST', 'CELR', 'DASH', 'NANO', 'OMG', 'THETA', 'ENJ', 'MITH', 'MATIC', 'ATOM', 'TFUEL', 'ONE', 'FTM', 'ALGO', 'USDSB', 'GTO', 'ERD', 'DOGE', 'DUSK', 'ANKR', 'WIN', 'COS', 'NPXS', 'COCOS', 'MTL', 'TOMO', 'PERL', 'DENT', 'MFT', 'KEY', 'STORM', 'DOCK', 'WAN', 'FUN', 'CVC', 'CHZ', 'BAND', 'BUSD', 'BEAM', 'XTZ', 'REN', 'RVN', 'HC', 'HBAR', 'NKN', 'STX', 'KAVA', 'ARPA', 'IOTX', 'RLC', 'MCO', 'CTXC', 'BCH', 'TROY', 'VITE', 'FTT', 'BUS', 'USD', 'USD', 'EUR', 'OGN', 'DREP', 'BULL', 'BEAR', 'ETHBULL', 'ETHBEAR', 'TCT', 'WRX', 'BTS', 'LSK', 'BNT', 'LTO', 'EOSBULL', 'EOSBEAR', 'XRPBULL', 'XRPBEAR', 'STRAT', 'AION', 'MBL', 'COTI', 'BNBBULL', 'BNBBEAR', 'STPT', 'USD', 'WTC', 'DATA', 'XZC', 'SOL', 'USDT', 'CTSI', 'HIVE', 'CHR', 'BTCUP', 'BTCDOWN', 'GXS', 'ARDR', 'LEND', 'MDT', 'STMX', 'KNC', 'REP', 'LRC', 'PNT', 'USD', 'COMP', 'USDT', 'BKRW', 'SC', 'ZEN', 'SNX', 'ETHUP', 'ETHDOWN', 'ADAUP', 'ADADOWN', 'LINKUP', 'LINKDOWN', 'VTHO', 'DGB', 'GBP', 'SXP', 'MKR', 'DAI', 'DCR', 'STORJ', 'BNBUP', 'BNBDOWN', 'XTZUP', 'XTZDOWN', 'USDT', 'MANA', 'AUD', 'YFI', 'BAL', 'BLZ', 'IRIS', 'KMD', 'USD', 'JST', 'SRM', 'ANT', 'CRV', 'SAND', 'OCEAN', 'NMR', 'DOT', 'LUNA', 'RSR', 'PAXG', 'WNXM', 'TRB', 'BZRX', 'SUSHI', 'YFII', 'KSM', 'EGLD', 'DIA', 'RUNE', 'FIO', 'UMA', 'EOSUP', 'EOSDOWN', 'TRXUP', 'TRXDOWN', 'XRPUP', 'XRPDOWN', 'DOTUP', 'DOTDOWN', 'USD', 'BEL', 'WING', 'LTCUP', 'LTCDOWN', 'UNI', 'NBS', 'OXT', 'SUN', 'AVAX', 'HNT', 'FLM', 'UNIUP', 'UNIDOWN', 'ORN', 'UTK', 'XVS', 'ALPHA', 'USD', 'AAVE', 'NEAR', 'SXPUP', 'SXPDOWN', 'FIL', 'FILUP', 'FILDOWN', 'YFIUP', 'YFIDOWN', 'INJ', 'AUDIO', 'CTK', 'BCHUP', 'BCHDOWN', 'AKRO', 'AXS', 'HARD', 'DNT', 'STRAX', 'UNFI', 'ROSE', 'AVA', 'XEM', 'AAVEUP', 'AAVEDOWN', 'SKL', 'SUSD', 'SUSHIUP', 'SUSHIDOWN', 'XLMUP', 'XLMDOWN', 'GRT', 'JUV', 'PSG', 'USDT', '1INCH', 'REEF', 'OG', 'ATM', 'ASR', 'CELO', 'RIF', 'BTCST', 'TRU', 'CKB', 'TWT', 'FIRO', 'LIT', 'SFP', 'DODO', 'CAKE', 'ACM', 'BADGER', 'FIS', 'OM', 'POND', 'DEGO', 'ALICE', 'LINA', 'PERP', 'RAMP', 'SUPER', 'CFX', 'EPS', 'AUTO', 'TKO', 'PUNDIX', 'TLM', '1INCHUP', '1INCHDOWN', 'BTG', 'MIR', 'BAR', 'FORTH', 'BAKE', 'BURGER', 'SLP', 'SHIB', 'ICP', 'USDT', 'AR', 'POLS', 'MDX', 'MASK')\n",
-    "#new_symbols = ['BTC', 'ETH', 'BNB', 'BCC', 'NEO', 'LTC', 'QTUM', 'ADA', 'XRP', 'EOS', 'TUSD', 'IOTA', 'XLM', 'ONT', 'TRX', 'ETC', 'ICX', 'VEN', 'NULS', 'VET', 'PAX', 'BCHABC', 'BCHSV', 'USDC', 'LINK', 'WAVES', 'BTT', 'USDS', 'ONG', 'HOT', 'ZIL', 'ZRX', 'FET', 'BAT', 'XMR', 'ZEC', 'IOST', 'CELR', 'DASH', 'NANO', 'OMG', 'THETA', 'ENJ', 'MITH', 'MATIC', 'ATOM', 'TFUEL', 'ONE', 'FTM', 'ALGO', 'USDSB', 'GTO', 'ERD', 'DOGE', 'DUSK', 'ANKR', 'WIN', 'COS', 'NPXS', 'COCOS', 'MTL', 'TOMO', 'PERL', 'DENT', 'MFT', 'KEY', 'STORM', 'DOCK', 'WAN', 'FUN', 'CVC', 'CHZ', 'BAND', 'BUSD', 'BEAM', 'XTZ', 'REN', 'RVN', 'HC', 'HBAR', 'NKN', 'STX', 'KAVA', 'ARPA', 'IOTX', 'RLC', 'MCO', 'CTXC', 'BCH', 'TROY', 'VITE', 'FTT', 'BUS', 'USD', 'USD', 'EUR', 'OGN', 'DREP', 'BULL', 'BEAR', 'ETHBULL', 'ETHBEAR', 'TCT', 'WRX', 'BTS', 'LSK', 'BNT', 'LTO', 'EOSBULL', 'EOSBEAR', 'XRPBULL', 'XRPBEAR', 'STRAT', 'AION', 'MBL', 'COTI', 'BNBBULL', 'BNBBEAR', 'STPT', 'USD', 'WTC', 'DATA', 'XZC', 'SOL', 'USDT', 'CTSI', 'HIVE', 'CHR', 'BTCUP', 'BTCDOWN', 'GXS', 'ARDR', 'LEND', 'MDT', 'STMX', 'KNC', 'REP', 'LRC', 'PNT', 'USD', 'COMP', 'USDT', 'BKRW', 'SC', 'ZEN', 'SNX', 'ETHUP', 'ETHDOWN', 'ADAUP', 'ADADOWN', 'LINKUP', 'LINKDOWN', 'VTHO', 'DGB', 'GBP', 'SXP', 'MKR', 'DAI', 'DCR', 'STORJ', 'BNBUP', 'BNBDOWN', 'XTZUP', 'XTZDOWN', 'USDT', 'MANA', 'AUD', 'YFI', 'BAL', 'BLZ', 'IRIS', 'KMD', 'USD', 'JST', 'SRM', 'ANT', 'CRV', 'SAND', 'OCEAN', 'NMR', 'DOT', 'LUNA', 'RSR', 'PAXG', 'WNXM', 'TRB', 'BZRX', 'SUSHI', 'YFII', 'KSM', 'EGLD', 'DIA', 'RUNE', 'FIO', 'UMA', 'EOSUP', 'EOSDOWN', 'TRXUP', 'TRXDOWN', 'XRPUP', 'XRPDOWN', 'DOTUP', 'DOTDOWN', 'USD', 'BEL', 'WING', 'LTCUP', 'LTCDOWN', 'UNI', 'NBS', 'OXT', 'SUN', 'AVAX', 'HNT', 'FLM', 'UNIUP', 'UNIDOWN', 'ORN', 'UTK', 'XVS', 'ALPHA', 'USD', 'AAVE', 'NEAR', 'SXPUP', 'SXPDOWN', 'FIL', 'FILUP', 'FILDOWN', 'YFIUP', 'YFIDOWN', 'INJ', 'AUDIO', 'CTK', 'BCHUP', 'BCHDOWN', 'AKRO', 'AXS', 'HARD', 'DNT', 'STRAX', 'UNFI', 'ROSE', 'AVA', 'XEM', 'AAVEUP', 'AAVEDOWN', 'SKL', 'SUSD', 'SUSHIUP', 'SUSHIDOWN', 'XLMUP', 'XLMDOWN', 'GRT', 'JUV', 'PSG', 'USDT', '1INCH', 'REEF', 'OG', 'ATM', 'ASR', 'CELO', 'RIF', 'BTCST', 'TRU', 'CKB', 'TWT', 'FIRO', 'LIT', 'SFP', 'DODO', 'CAKE', 'ACM', 'BADGER', 'FIS', 'OM', 'POND', 'DEGO', 'ALICE', 'LINA', 'PERP', 'RAMP', 'SUPER', 'CFX', 'EPS', 'AUTO', 'TKO', 'PUNDIX', 'TLM', '1INCHUP', '1INCHDOWN', 'BTG', 'MIR', 'BAR', 'FORTH', 'BAKE', 'BURGER', 'SLP', 'SHIB', 'ICP', 'USDT', 'AR', 'POLS', 'MDX', 'MASK']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "af6f9082",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "symbols_in_db = [('MDT',), ('DEGO',), ('TROY',), ('REP',), ('THETA',), ('TFUEL',), ('BAKE',), ('EPS',), ('XRPBULL',), ('LTC',), ('STRAT',), ('ETHBEAR',), ('POLS',), ('WAN',), ('ETH',), ('LTO',), ('BTT',), ('MATIC',), ('NULS',), ('HIVE',), ('XZC',), ('ONT',), ('AION',), ('ICX',), ('CTSI',), ('BTG',), ('TKO',), ('MFT',), ('SLP',), ('KMD',), ('VEN',), ('EOSBULL',), ('BNBBEAR',), ('VET',), ('AR',), ('YFII',), ('TRX',), ('TOMO',), ('MBL',), ('LEND',), ('DOCK',), ('NEO',), ('DODO',), ('ONG',), ('GXS',), ('STX',), ('IOTX',), ('EOS',), ('ATOM',), ('CTXC',), ('KAVA',), ('LINA',), ('ADA',), ('BAT',), ('ETHBULL',), ('QTUM',), ('SAND',), ('XTZ',), ('SHIB',), ('NBS',), ('ASR',), ('FLM',), ('NKN',), ('PNT',), ('OMG',), ('ONE',), ('NEAR',), ('MITH',), ('ANKR',), ('DASH',), ('BKRW',), ('ARDR',), ('BULL',), ('ALICE',), ('USDT',), ('NPXS',), ('COS',), ('PAX',), ('ZIL',), ('AXS',), ('MTL',), ('HBAR',), ('BAND',), ('DCR',), ('RAMP',), ('AUTO',), ('VTHO',), ('OGN',), ('ZEC',), ('FUN',), ('CVC',), ('REN',), ('GBP',), ('WRX',), ('GTO',), ('KEY',), ('IOTA',), ('FET',), ('STPT',), ('BNT',), ('UMA',), ('COTI',), ('USDC',), ('TCT',), ('JST',), ('HOT',), ('LSK',), ('WIN',), ('ENJ',), ('FTT',), ('KNC',), ('RLC',), ('STORJ',), ('DREP',), ('BTC',), ('BZRX',), ('BTS',), ('VITE',), ('XRP',), ('STORM',), ('IOST',), ('USDS',), ('BUSD',), ('EOSBEAR',), ('NANO',), ('COCOS',), ('CELR',), ('MIR',), ('RVN',), ('SC',), ('DATA',), ('SNX',), ('MASK',), ('BCH',), ('PERL',), ('XRPBEAR',), ('BAR',), ('SUSHI',), ('XLM',), ('DUSK',), ('ETC',), ('HC',), ('TUSD',), ('BEAM',), ('JUV',), ('SOL',), ('ERD',), ('PERP',), ('BNB',), ('ALGO',), ('EUR',), ('WTC',), ('OM',), ('MCO',), ('ICP',), ('LINK',), ('DENT',), ('XMR',), ('DOGE',), ('FTM',), ('ARPA',)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "384b27ae",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "symbols_in_db = [symbols[0] for symbols in symbols_in_db]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "1b47e298",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "new_symbols = []\n",
-    "for i in current_symbols:\n",
-    "    if i not in symbols_in_db:\n",
-    "        new_symbols.append(i)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "2f197429",
+   "id": "46181633",
    "metadata": {},
    "outputs": [],
    "source": []
