adding ensemble to pipeline

--- a/research_papers/Trading crypto with ML under changing markets.ipynb
+++ b/research_papers/Trading crypto with ML under changing markets.ipynb
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 247,
-   "id": "b6fa1ba7",
+   "id": "90fb9732",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 249,
-   "id": "664e1829",
+   "id": "a71cdd54",
    "metadata": {},
    "outputs": [
     {
@@ -5513,28 +5513,18 @@
   {
    "cell_type": "code",
    "execution_count": 252,
-   "id": "b6c5aa6c",
+   "id": "3e888000",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
-    "\n",
-    "def split_data(df):\n",
-    "    df = df.dropna()\n",
-    "    train = df[:int(len(df) * 0.75)]\n",
-    "    test = df[int(len(df) * 0.75):]\n",
-    "\n",
-    "    y = train['close']\n",
-    "    X = train.drop('close', axis=1)\n",
-    "\n",
-    "    X_train, X_valid, y_train, y_valid = train_test_split(X, y, shuffle=False)\n",
-    "    return X_train, X_valid, y_train, y_valid"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 488,
-   "id": "2db98cef",
+   "execution_count": 729,
+   "id": "5ca46eab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5544,11 +5534,26 @@
     "    Requires cleaned dataframe.\n",
     "    \"\"\"\n",
     "    def __init__(self, df, verbose=False):\n",
-    "        self.df = df\n",
-    "        self.verbose=verbose\n",
+    "        self.df = df,\n",
+    "        self.verbose=verbose,\n",
     "        self.models = ['LogisticRegression', 'RandomForestClassifier', 'SVC', 'EnsembleClf',\n",
-    "          'LinearRegression', 'RandomForestRegressor', 'SVR', 'EnsembleReg']\n",
-    "        self.error = ['MAE', 'MSE', 'f1', 'precision', 'recall', 'accuracy']\n",
+    "          'LinearRegression', 'RandomForestRegressor', 'SVR', 'EnsembleReg'],\n",
+    "        self.error = ['MAE', 'MSE', 'f1', 'precision', 'recall', 'accuracy'],\n",
+    "        self.model_list_clf = ['RandomForestClassifier', 'SVC', 'LogisticRegression'],\n",
+    "        self.model_list_reg = ['LinearRegression', 'RandomForestRegressor', 'SVR']\n",
+    "        \n",
+    "    def _split_data(self):\n",
+    "        if isinstance(self.df, tuple):\n",
+    "            self.df = self.df[0]\n",
+    "        self.df = self.df.dropna()\n",
+    "        train = self.df[:int(len(self.df) * 0.75)]\n",
+    "        test = self.df[int(len(self.df) * 0.75):]\n",
+    "\n",
+    "        y = train['close']\n",
+    "        X = train.drop('close', axis=1)\n",
+    "\n",
+    "        X_train, X_valid, y_train, y_valid = train_test_split(X, y, shuffle=False)\n",
+    "        return X_train, X_valid, y_train, y_valid\n",
     "    \n",
     "    def _class_or_reg(self, mod_type, sk_model, X_train, y_train, X_valid, y_valid):\n",
     "        \"\"\"\n",
@@ -5597,7 +5602,7 @@
     "                returns [f1, precision, recall, accuracy]\n",
     "\n",
     "        \"\"\"\n",
-    "        X_train, X_valid, y_train, y_valid = split_data(self.df)\n",
+    "        X_train, X_valid, y_train, y_valid = self._split_data()\n",
     "\n",
     "        #Convert to binary dependent variables for classification models\n",
     "        clf_y_train = y_train.diff() > 0\n",
@@ -5638,59 +5643,99 @@
     "        \"\"\"\n",
     "        Summarizes the errors of all used models\n",
     "        \"\"\"\n",
-    "        df_summary = pd.DataFrame(index = self.models, columns = self.error)\n",
-    "        model_list = ['RandomForestClassifier', 'SVC', 'LogisticRegression']\n",
+    "        df_summary = pd.DataFrame(index = self.models[0], columns = self.error[0])\n",
     "        classify_models = []\n",
-    "        ensemble_clf = []\n",
-    "        for i in model_list:\n",
+    "        self.model_list_clf = self.model_list_clf[0]\n",
+    "        for i in self.model_list_clf:\n",
     "            clf, clf_pred, [f1, precision, recall, accuracy] = self.fit_model(i)\n",
-    "            ensemble_clf.append(clf_pred)\n",
     "            classify_models.append((f1, precision, recall, accuracy))\n",
-    "\n",
-    "        if ensemble:\n",
-    "            mapping = {True: 1, False: -1}\n",
-    "            model_1, model_2, model_3 = ensemble_clf\n",
-    "            model_1 = np.array([mapping[x] for x in model_1])\n",
-    "            model_2 = np.array([mapping[x] for x in model_2])\n",
-    "            model_3 = np.array([mapping[x] for x in model_3])\n",
-    "            ensemble_clf = model_1 + model_2 + model_3\n",
-    "            y_pred = ensemble_clf > 0\n",
-    "\n",
-    "            _, _, _, y_valid = split_data(self.df)\n",
-    "            y_valid_clf = y_valid.copy()\n",
-    "            y_valid_clf = y_valid_clf.diff() > 0\n",
-    "            errors = [f1_score(y_valid_clf, y_pred), precision_score(y_valid_clf, y_pred),\n",
-    "                    recall_score(y_valid_clf, y_pred), accuracy_score(y_valid_clf, y_pred)]\n",
-    "\n",
-    "            df_summary.loc['EnsembleClf'][2:] = errors\n",
-    "\n",
-    "        for i, vals in zip(model_list, classify_models):\n",
+    "        \n",
+    "        for i, vals in zip(self.model_list_clf, classify_models):\n",
     "            df_summary.loc[i][2:] =  vals\n",
     "\n",
-    "        model_list = ['LinearRegression', 'RandomForestRegressor', 'SVR']\n",
     "        reg_models = []\n",
-    "        ensemble_reg = []\n",
-    "        for i in model_list:\n",
+    "        for i in self.model_list_reg:\n",
     "            reg, reg_pred, [mae, mse] = self.fit_model(i)\n",
     "            reg_models.append([mae, mse])\n",
-    "            ensemble_reg.append(reg_pred)\n",
     "\n",
-    "        if ensemble:\n",
-    "            model_1, model_2, model_3 = ensemble_reg\n",
-    "            ensemble_reg = (np.array(model_1) + np.array(model_2) + np.array(model_3))/3\n",
-    "            y_pred = ensemble_reg\n",
-    "            errors = [MAE(y_valid, y_pred), MSE(y_valid, y_pred)]\n",
-    "            df_summary.loc['EnsembleReg'][:2] = errors\n",
-    "\n",
-    "        for i, vals in zip(model_list, reg_models):\n",
+    "        for i, vals in zip(self.model_list_reg, reg_models):\n",
     "            df_summary.loc[i][:2] = vals\n",
-    "        return df_summary"
+    "            \n",
+    "        if ensemble:\n",
+    "            clf_errors, reg_errors = self.ensemble()\n",
+    "            df_summary.loc['EnsembleClf'][2:] = clf_errors\n",
+    "            df_summary.loc['EnsembleReg'][:2] = reg_errors\n",
+    "\n",
+    "        return df_summary\n",
+    "    \n",
+    "    def ensemble(self):\n",
+    "        ensemble_clf = []\n",
+    "        if isinstance(self.model_list_clf, tuple):\n",
+    "            self.model_list_clf = self.model_list_clf[0]\n",
+    "        for i in self.model_list_clf:\n",
+    "            clf, clf_pred, [f1, precision, recall, accuracy] = self.fit_model(i)\n",
+    "            ensemble_clf.append(clf_pred)\n",
+    "        mapping = {True: 1, False: -1}\n",
+    "        mapped_data = []\n",
+    "                                                  \n",
+    "        for i in ensemble_clf:\n",
+    "            mapped_data.append([mapping[x] for x in i])\n",
+    "        model_1, model_2, model_3 = np.array(mapped_data)\n",
+    "        y_pred = model_1+model_2+model_3\n",
+    "        _, _, _, y_valid = self._split_data()\n",
+    "        y_valid_clf = y_valid.diff() > 0\n",
+    "        y_pred = y_pred > 0\n",
+    "        clf_errors = [f1_score(y_valid_clf, y_pred), precision_score(y_valid_clf, y_pred),\n",
+    "                    recall_score(y_valid_clf, y_pred), accuracy_score(y_valid_clf, y_pred)]\n",
+    "        \n",
+    "        ensemble_reg = []\n",
+    "        for i in self.model_list_reg:\n",
+    "            reg, reg_pred, [mae, mse] = self.fit_model(i)\n",
+    "            ensemble_reg.append(reg_pred)\n",
+    "        model_1, model_2, model_3 = ensemble_reg\n",
+    "        ensemble_reg = (np.array(model_1) + np.array(model_2) + np.array(model_3))/3\n",
+    "        reg_errors = [MAE(y_valid, y_pred), MSE(y_valid, y_pred)]\n",
+    "        \n",
+    "        return clf_errors, reg_errors"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 489,
-   "id": "75fcc35e",
+   "execution_count": 727,
+   "id": "6d334456",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(['RandomForestClassifier', 'SVC', 'LogisticRegression'],)"
+      ]
+     },
+     "execution_count": 727,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_1 = model_pipeline(btc)\n",
+    "test_1.model_list_clf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 730,
+   "id": "211228da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_1 = model_pipeline(btc)\n",
+    "summary_df = test_1.make_dataframe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 731,
+   "id": "3a00abac",
    "metadata": {},
    "outputs": [
     {
@@ -5736,10 +5781,10 @@
        "      <th>RandomForestClassifier</th>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.539683</td>\n",
-       "      <td>0.563536</td>\n",
-       "      <td>0.517766</td>\n",
-       "      <td>0.534759</td>\n",
+       "      <td>0.578811</td>\n",
+       "      <td>0.589474</td>\n",
+       "      <td>0.568528</td>\n",
+       "      <td>0.564171</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>SVC</th>\n",
@@ -5754,10 +5799,10 @@
        "      <th>EnsembleClf</th>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.679174</td>\n",
-       "      <td>0.53869</td>\n",
-       "      <td>0.918782</td>\n",
-       "      <td>0.542781</td>\n",
+       "      <td>0.686679</td>\n",
+       "      <td>0.544643</td>\n",
+       "      <td>0.928934</td>\n",
+       "      <td>0.553476</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>LinearRegression</th>\n",
@@ -5770,8 +5815,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>RandomForestRegressor</th>\n",
-       "      <td>0.005257</td>\n",
-       "      <td>0.000119</td>\n",
+       "      <td>0.005316</td>\n",
+       "      <td>0.000127</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -5788,8 +5833,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>EnsembleReg</th>\n",
-       "      <td>0.384162</td>\n",
-       "      <td>0.173504</td>\n",
+       "      <td>7.942502</td>\n",
+       "      <td>63.351699</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -5800,41 +5845,40 @@
        "</div>"
       ],
       "text/plain": [
-       "                             MAE       MSE        f1 precision    recall  \\\n",
-       "LogisticRegression           NaN       NaN  0.679537  0.548287  0.893401   \n",
-       "RandomForestClassifier       NaN       NaN  0.539683  0.563536  0.517766   \n",
-       "SVC                          NaN       NaN  0.696113  0.533875       1.0   \n",
-       "EnsembleClf                  NaN       NaN  0.679174   0.53869  0.918782   \n",
-       "LinearRegression        0.000022       0.0       NaN       NaN       NaN   \n",
-       "RandomForestRegressor   0.005257  0.000119       NaN       NaN       NaN   \n",
-       "SVR                     1.153107    1.5629       NaN       NaN       NaN   \n",
-       "EnsembleReg             0.384162  0.173504       NaN       NaN       NaN   \n",
+       "                             MAE        MSE        f1 precision    recall  \\\n",
+       "LogisticRegression           NaN        NaN  0.679537  0.548287  0.893401   \n",
+       "RandomForestClassifier       NaN        NaN  0.578811  0.589474  0.568528   \n",
+       "SVC                          NaN        NaN  0.696113  0.533875       1.0   \n",
+       "EnsembleClf                  NaN        NaN  0.686679  0.544643  0.928934   \n",
+       "LinearRegression        0.000022        0.0       NaN       NaN       NaN   \n",
+       "RandomForestRegressor   0.005316   0.000127       NaN       NaN       NaN   \n",
+       "SVR                     1.153107     1.5629       NaN       NaN       NaN   \n",
+       "EnsembleReg             7.942502  63.351699       NaN       NaN       NaN   \n",
        "\n",
        "                        accuracy  \n",
        "LogisticRegression       0.55615  \n",
-       "RandomForestClassifier  0.534759  \n",
+       "RandomForestClassifier  0.564171  \n",
        "SVC                     0.540107  \n",
-       "EnsembleClf             0.542781  \n",
+       "EnsembleClf             0.553476  \n",
        "LinearRegression             NaN  \n",
        "RandomForestRegressor        NaN  \n",
        "SVR                          NaN  \n",
        "EnsembleReg                  NaN  "
       ]
      },
-     "execution_count": 489,
+     "execution_count": 731,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "test_1 = model_pipeline(btc)\n",
-    "test_1.make_dataframe()"
+    "summary_df"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5b9e019",
+   "id": "2bd8b648",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5854,16 +5898,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "efe441c5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 461,
-   "id": "5e24844d",
+   "id": "277ef065",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5873,7 +5909,7 @@
   {
    "cell_type": "code",
    "execution_count": 462,
-   "id": "3a47872e",
+   "id": "b493ac07",
    "metadata": {},
    "outputs": [
     {
@@ -6085,7 +6121,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a295fc08",
+   "id": "8da9846a",
    "metadata": {},
    "source": [
     "### ----- Do sliding window approach -------"
@@ -6094,7 +6130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aba6c022",
+   "id": "b2b08b44",
    "metadata": {},
    "outputs": [],
    "source": []
