fixing import errors

--- a/notebooks/crypto/ML approaches to crypto.ipynb
+++ b/notebooks/crypto/ML approaches to crypto.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "50c6fb55",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,9 @@
     "import re\n",
     "import numpy as np\n",
     "import plotly.express as px\n",
-    "#Gets data from postgressql server\n",
+    "#Gets data from postgressql serverhttp://localhost:8888/notebooks/notebooks/crypto/ML%20approaches%20to%20crypto.ipynb#\n",
+    "import os, sys\n",
+    "sys.path.append(os.path.abspath('../'))\n",
     "from helper_funcs import get_data, convert_unix_to_datetime, separate_symbols\n",
     "\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -78,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "15daf4f8",
    "metadata": {},
    "outputs": [
@@ -112,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "1c36d007",
    "metadata": {},
    "outputs": [],
@@ -183,10 +185,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "id": "09de847a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'btc' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-29833eaf142f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#pd.options.mode.chained_assignment = None\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mbtc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpreprocess\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbtc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'BTC'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0meth\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpreprocess\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0meth\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'ETH'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mltc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpreprocess\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mltc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'LTC'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'btc' is not defined"
+     ]
+    }
+   ],
    "source": [
     "#pd.options.mode.chained_assignment = None\n",
     "btc = preprocess(btc, 'BTC')\n",
