Change ML_approaches notebook to use binance api

--- a/notebooks/crypto/ML approaches to crypto.ipynb
+++ b/notebooks/crypto/ML approaches to crypto.ipynb
@@ -199,14 +199,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "id": "861a0555-64ea-4e3e-a7c8-3c999ab2f09a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 7,
    "id": "09de847a",
    "metadata": {},
@@ -5071,7 +5063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "id": "c3d1c304",
    "metadata": {},
    "outputs": [
@@ -5081,6 +5073,19 @@
      "text": [
       "Fitting 3 folds for each of 54 candidates, totalling 162 fits\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'max_features': None,\n",
+       " 'min_impurity_decrease': 0,\n",
+       " 'min_samples_leaf': 5,\n",
+       " 'n_estimators': 1000}"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -5090,10 +5095,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "id": "474da1cd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 3 folds for each of 54 candidates, totalling 162 fits\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'max_features': None,\n",
+       " 'min_impurity_decrease': 0,\n",
+       " 'min_samples_leaf': 5,\n",
+       " 'n_estimators': 500}"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "grid_search_rfr = cross_validate(RandomForestRegressor(), 'RandomForestRegressor', classify=True)\n",
     "grid_search_rfr.best_params_"
